--- a/Story1_1.html
+++ b/Story1_1.html
@@ -11,7 +11,10 @@
   <div class="header"></div>
   <div class="content">
     <h1>Instructions</h1>
-    <p> Roommate Backstory</p>
+    <p> She is a quiet girl 
+     and doesn't say much but she doesn't have to if you look at here it obvious 
+     she has been through some shit. Call me a white knight but I feel it great to 
+     help people get throght a rough patch in there life.</p>
   <div class="footer">
     <p>Footer</p>
     <!-- end .footer --></div>
