--- a/Story.html
+++ b/Story.html
@@ -11,7 +11,22 @@
   <div class="header"></div>
   <div class="content">
     <h1>Instructions</h1>
-    <p>I shouldn't have had those two for one burritos at that gas station. I'm always looking for a deal and always mange to shoot myself in the foot. Lucky their was almost no traffic and I have been able to go home relevantly fast. My home as of a year ago has been a small apartment just outside of the city it really big compare to what you can find closer to the city and it is somewhat cheaper too. Even thought it is cheap I still found myself a roommate because there is no point in have such a big place to yourself. She is a quiet girl and doesn't say much but she doesn't have to if you look at here it obvious she has been through some shit. Call me a white knight but I feel it great to help people get throght a rough patch in there life. I finally get home and am surprise my lower half has been able to keep itself together for so long. Now I just have to go up 4 flights of stairs, ah the joy. I run up the stairs and finally make it to the top I am hoping my roommate isn't there yet and I run into the bathroom. As I sit down I let like it rip and the relief is insane. As I am relaxing on the toilet seat I hear my roommate scream. Which is a little weird because she usually quite, <a href="story2_1.html"> (I should ask her if she is alright.) </a> But then again she is a little weird and is into some weird shit, <a href="story2_2.html"> ( it probably nothing.)</a> It actually sounds likes someone else is there <a href="story2_3.html"> (I should go check..)</a> 
+    <p>I shouldn't have had those two for one <a href="story1_2.html" style="color: #CC0000">burritos</a> at that gas station. 
+    I'm always looking for a deal and always mange to shoot myself in the foot. 
+    Lucky their was almost no traffic and I have been able to go home relevantly fast.
+     My home as of a year ago has been a small apartment just outside of the city it 
+     really big compare to what you can find closer to the city and it is somewhat 
+     cheaper too. Even thought it is cheap I still found myself a  <a href="story1_1.html" style="color: #CC0000">roommate</a> because 
+     there is no point in have such a big place to yourself.  I finally get home and am 
+     surprise my lower half has been able to keep itself together for so long. Now I 
+     just have to go up 4 flights of stairs, ah the joy. I run up the stairs and 
+     finally make it to the top I am hoping my roommate isn't there yet and I run 
+     into the bathroom. As I sit down I let like it rip and the relief is insane. 
+     As I am relaxing on the toilet seat I hear my roommate scream. Which is a little 
+     weird because she usually quite, <a href="story2_1.html"> (I should ask her if she 
+     is alright.) </a>  But then again she is a little weird and is into some weird shit, 
+     <a href="story2_2.html"> ( it probably nothing.)</a> It actually sounds 
+     likes someone else is there <a href="story2_3.html"> (I should go check..)</a> 
   <div class="footer">
     <p>Footer</p>
     <!-- end .footer --></div>
